tienmvv.Fix button in project our overflow

--- a/src/app/assets/styles/our-projects.scss
+++ b/src/app/assets/styles/our-projects.scss
@@ -41,7 +41,7 @@
           @apply flex w-full flex-col gap-4 items-end;
           z-index: 10;
           .content-1 {
-            @apply lg:text-[48px] md:text-[38px];
+            @apply xl:text-[48px] lg:text-[45px] md:text-[38px];
             color: #FFF;
             text-align: right;
             font-family: Anton;
@@ -73,14 +73,13 @@
           }
         }
         .group-3 {
-          @apply flex flex-col gap-2 items-end absolute lg:right-[20px] lg:bottom-[24px] md:right-2 md:bottom-10;
+          @apply flex flex-col gap-2 items-end z-20 lg:right-[20px] lg:bottom-[24px] md:right-2 md:bottom-10;
           a {
             @apply lg:text-[16px] md:text-[14px] lg:w-[206px] md:w-[145px] lg:py-1.5 lg:px-6 md:px-2 md:py-1;
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 4px;
-            align-self: stretch;
             border-radius: 56px;
             border: 0.5px solid #FFF;
             cursor: pointer;
@@ -148,7 +147,7 @@
           @apply flex w-full flex-col gap-4 items-end;
           z-index: 10;
           .content-1 {
-            @apply lg:text-[48px] md:text-[38px];
+            @apply xl:text-[48px] lg:text-[45px] md:text-[38px];
             color: #FFF;
             text-align: right;
             font-family: Anton;
@@ -159,7 +158,7 @@
           }
           .content-2 {
             @apply flex flex-col items-end;
-            span {
+            span:nth-child(1) {
               @apply lg:text-[16px] md:text-[14px];
               color: #FFF;
               text-align: right;
@@ -167,6 +166,16 @@
               font-style: normal;
               font-weight: 400;
               line-height: 130%; /* 20.8px */
+            }
+            span:nth-child(2) {
+              color: #FFF;
+              text-align: right;
+              font-family: Anton;
+              font-size: 34px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: normal;
+              text-transform: uppercase;
             }
           }
           .content-3 {
@@ -180,14 +189,13 @@
           }
         }
         .group-3 {
-          @apply flex flex-col gap-2 items-end absolute lg:right-[20px] lg:bottom-[94px] md:right-2 md:bottom-20;
+          @apply flex flex-col gap-2 w-full items-end lg:right-[20px] lg:bottom-[94px] md:right-2 md:bottom-20 z-10;
           a {
             @apply lg:text-[16px] md:text-[14px] lg:w-[206px] md:w-[145px] lg:py-1.5 lg:px-6 md:px-2 md:py-1;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: end;
             gap: 4px;
-            align-self: stretch;
             border-radius: 56px;
             border: 0.5px solid #FFF;
             cursor: pointer;
